right alignment fixed (possibly)

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,3 @@ hidden
 {
 	visibility: hidden;
 }
-alignright:
-{
-	float: right;
-}
